@@ -366,7 +366,8 @@ Mat([0, 0, 0, 2, 0]), 2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]), Mat(1/2),
  [Mat(-2), Mat(-3)]], [Mat([0, 2, 0]), Mat([1, 1, 1])]]]]
 [[[5, 1, [2, 2; 5, 2; 39821, 1; 161141, 1]]], [[]], [], [[10, 2, [2, 6; 5, 4
 ; 39821, 2; 161141, 2]], []]]
-[[[0, 0, 0]], [[]], [], [[0, 0, 0], []]]
+[[[0, 0, 0]], [[10, 0, [-1, 1; 2, 5; 5, 4; 39821, 2; 161141, 2]]], [], [[], 
+[]]]
 [[[matrix(0,2), 0, 0, 0]], [[Mat([50, 1]), 0, 0, 0]], [], [[Mat([50, 2]), 0,
  0, 0], [Mat([56, 1]), 0, 0, 0]]]
 2
@@ -512,4 +513,4 @@ Mod(-6/5, x)
   ***   at top-level: idealhnf(nfinit(a^2+1),3,(a^2+1)*Mod(1,3))
   ***                          ^---------------------------------
   *** nfinit: incorrect type in checknf [please apply nfinit()] (t_POLMOD).
-Total time spent: 1915
+Total time spent: 1856
