@@ -15,6 +15,7 @@ mathnf([;])
 mathnf([;],1)
 mathnfmodid(matrix(0,2), [])
 mathnfmodid([0,7;-1,0;-1,-1], [6,2,2])
+mathnfmodid([;],[2])
 
 matsolvemod([;],[]~,[]~,1)
 matsolvemod([;],[],[]~,1)
